--- a/web/test.html
+++ b/web/test.html
@@ -6,41 +6,63 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link href="templates/css/login.css" type="text/css" rel="stylesheet"/>
+    <link href="templates/css/collection.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container-fluid login-body">
-    <div class="row">
-        <div class="col-md-7"></div>
-        <div class="col-md-3">
-            <form class="form-horizontal login-form" role="form">
-                <div class="form-group login-form-group">
-                    <label for="inputUsername" class="col-sm-3 control-label">username</label>
-                    <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputUsername" name="username" placeholder="请输入用户名">
-                    </div>
-                </div>
-                <div class="form-group login-tip login-form-group">
-                    <span class="col-sm-6">用户名不能为空</span>
-                </div>
-                <div class="form-group login-form-group">
-                    <label for="inputPassword" class="col-sm-3 control-label">password</label>
-                    <div class="col-sm-9">
-                        <input type="password" class="form-control" id="inputPassword" name="pwd" placeholder="请输入密码">
-                    </div>
-                </div>
-                <div class="form-group login-tip login-form-group">
-                    <span class="col-sm-6">密码不能为空</span>
-                </div>
-                <div class="form-group login-button login-form-group">
-                    <div class="col-sm-12">
-                        <button type="button" class="btn btn-primary btn-block">登录</button>
-                    </div>
-                </div>
-            </form>
+    <div class="container">
+        <!--<div class="row">-->
+        <!--<div class="col-md-4"></div>-->
+        <!--<div class="col-md-8">你的收藏夹空空如也，去找找心仪的文物 <a href="index.jsp">回到首页</a></div>-->
+        <!--</div>-->
+        <div class="row collection-item">
+            <div class="col-md-2  text-center">图片</div>
+            <div class="col-md-2">博物名称</div>
+            <div class="col-md-2">馆藏地点</div>
+            <div class="col-md-2">出土（或完成）时间</div>
+            <div class="col-md-2">热度</div>
+            <div class="col-md-2">操作</div>
         </div>
-        <div class="col-md-2"></div>
+
+        <div class="row collection-item">
+            <div class="col-md-2">
+                <div class="item-img-body">
+                    <img src="templates/img/art_img/3.jpg"  class="collection-img" alt="博物图片">
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="collection-item-body">
+                    一件文物
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="collection-item-body">
+                    故宫博物馆
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="collection-item-body">
+                    1904
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="collection-item-body">
+                    115
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="collection-item-body">
+                    <label class="btn btn-primary btn-sm">
+                        <input type="radio" name="options" class="item" id="<%=item.getId()%>" > 详情
+                    </label>
+                    <label class="btn btn-primary btn-sm">
+                        <input type="radio" name="options" class="delete"> 删除
+                    </label>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+<script src="templates/js/collection.js"></script>
 </body>
 </html>
